--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="community.html">Community</a></li>
         <li><a href="membership.html">Membership</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
