Modified about page

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <div>
         <h2>Our Story</h2>
         <p>
-          The Community Knowledge Archive Platform (CKAP) was born out of a need to preserve Nigeria’s rich indigenous knowledge and make it accessible to students, researchers, and communities. 
+          The Community Knowledge Archive Platform (CKAP) was developed by group 1 400L lis students as need to preserve Nigeria’s rich indigenous knowledge and make it accessible to students, researchers, and communities. 
           As Library and Information Science students, we recognized the gap between traditional wisdom and modern digital tools. CKAP bridges that gap by digitizing oral histories, cultural practices, and local research outputs.
         </p>
         <p>
@@ -49,7 +49,7 @@
       <div class="highlight-box">
         <h3>Quick Facts</h3>
         <ul class="checklist">
-          <li><strong>Founded by:</strong> LIS students</li>
+          <li><strong>Founded by:</strong> LIS students UniAbuja</li>
           <li><strong>Focus:</strong> Indigenous knowledge & digital literacy</li>
           <li><strong>Impact:</strong> Education, cultural preservation, community empowerment</li>
           <li><strong>Model:</strong> Social enterprise generating income</li>
